--- a/style.css
+++ b/style.css
@@ -1,22 +1,40 @@
-*{
-    margin: 0px;
-}
-
-body {
+* {
     margin: 0;
     padding: 0;
-    background-image: url('media/grass.jpg');
-    background-repeat: repeat;
-    background-size: 200px;
-    }
+    box-sizing: border-box;
+}
 
-    .character{
-        position: relative;
-        width: 100px;
-        /* border: 5px solid black; */
-    }
+body, html {
+    overflow: hidden; 
+    height: 100%;
+}
 
-    .obstacle{
-        width: 100px;
-        display: none;
-    }
+
+#game-container {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #b3e5fc; 
+}
+
+/* Canvas */
+#game-canvas {
+    width: 1600px;
+    height: 1600px;
+    background-color: lightblue; 
+    border: 1px solid #000;
+}
+
+/* Character */
+#character {
+    position: absolute;
+    width: 100px;
+    height: auto;
+    z-index: 1; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+}
